@@ -100,6 +100,7 @@ AAAIntroduction
   - fixed GH #224: building 1.5.1 on Windows for x64
   - fixed GH# 233: ServerSocket::bind6(Poco::UInt16 port, bool reuseAddress, bool ipV6Only) does not work
   - fixed GH# 231: Compatibility issue with Poco::Net::NetworkInterface
+  - fixed GH# 236: Bug in RecursiveDirectoryIterator
 
 !!Incompatible Changes and Possible Transition Issues
 
