@@ -97,6 +97,7 @@ Release 1.5.2 (2013-07-19)
 - fixed GH #224: building 1.5.1 on Windows for x64
 - fixed GH# 233: ServerSocket::bind6(Poco::UInt16 port, bool reuseAddress, bool ipV6Only) does not work
 - fixed GH# 231: Compatibility issue with Poco::Net::NetworkInterface
+- fixed GH# 236: Bug in RecursiveDirectoryIterator
 
 
 Release 1.5.1 (2013-01-11)
